try to fix lower nav bar on mobile

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -374,7 +374,7 @@ ul li:hover ul.cat-dropdown {
 
   #lower-bar {
     width: 100vw;
-    height: 12vh;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -443,6 +443,5 @@ ul li:hover ul.cat-dropdown {
     background-color: #7F7FB5;
     color: #F2F1F3;
     justify-content: flex-end;
-    bottom: 0px;
   }
 }
